--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiero F</title>
- <script src="estudo.js"></script>
- <link rel="stylesheet" href="geral.css">
+    <title>Primeiro F</title>
+    <script src="estudo.js"></script>
+    <link rel="stylesheet" href="geral.css">
 </head>
+
 <body>
-  <div class="calculadora">
-        <div id="spTotal">
-            <span id="Total">Total: 0,00</span>
+    <input type="checkbox" id="input-calcF">
+    <div class="calculadora">
+        <label for="input-calcF"><h5> calculadora financeira</h5></label>
+        <div class="calcF">
+       <div id="spTotal">
+          <span id="total">total : 0,00</span>
+       </div>
+        Capital: <input id="valor" type="text"><br>
+        Juros mensais: <input id="juros" type="text"><br>
+        Nr. meses: <input id="meses" type="text"><br>
+        <button onclick="total()"> Enviar</button><br>
+        <div id="spMes">
+            <span id="mes">meses : 0,00</span>
+         </div>
         </div>
-     Capital: <input id="valor" type="text"><br>
-     Juros mensais: <input id="juros" type="text"><br>
-     N. meses: <input id="meses" type="text"><br>
-     <button onclick="total()">enviar</button><br>
-     <div id="spMes">
-        <span id="Mes">Meses</span>
     </div>
- </div> 
-    
+
     <br><br><br><br><br>
-    <span id="resul">Resultado: 0,00</span> <br>
-Bimestre 1: <input id="b1" type="text"><br>
-Bimestre 2: <input id="b2" type="text"><br>
-Bimestre 3: <input id="b3" type="text"><br>
-Bimestre 4: <input id="b4" type="text"><br>
-<button onclick="SomaNota()">Soma as Notas</button>
-<button onclick="media()">Média</button>
-<button onclick="passa()">Quanto Falta</button>
+
+    <span id="result">resultado: 0,00</span><br>
+    Bimestre 1: <input id="b1" type="text"><br>
+    Bimestre 2: <input id="b2" type="text"><br>
+    Bimestre 3: <input id="b3" type="text"><br>
+    Bimestre 4: <input id="b4" type="text"><br>
+
+    <button onclick="jota()">soma das notas</button>
+
 
 
 
 
 
 </body>
+
 </html>
-
-
-
